--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <a href="paidadd.html">Paid Advertising All platforms</a>
                 <a href="promotion.html">Promotional Video Marketing</a>
                 <a href="localization.html">Translation & Localization Service</a>
-                <a href="expert.html">Service Provider</a>
+                <!-- <a href="expert.html">Service Provider</a> -->
               </div>
             </div>
           </li>
