--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
               <div class="aboutus-feature-one">
                 <span><i class="fa fa-search aboutus-icon"></i> </span>
                 <span class="aboutus-feature-items">
-                  World Best Search Engine Optimization
+                  Best in class Search Engine Optimization services
                 </span>
               </div>
               <div class="aboutus-feature-one">
                 <span><i class="fa fa-file aboutus-icon"></i> </span>
                 <span class="aboutus-feature-items">
-                  World Creative & Professional Content Writer
+                  Pool of most creative and experienced Content Creators
                 </span>
               </div>
               <div class="aboutus-feature-one">
                 <span><i class="fa fa-bar-chart aboutus-icon"></i> </span>
                 <span class="aboutus-feature-items">
-                  optimized Your Business Growth Next Level
+                  Maximizing the Potential of Your Company to New Heights
                 </span>
                 <!-- </div>
                      <a href="" class="aboutus-btn">Contact Us</a>
@@ -250,9 +250,7 @@
           <h2 class="h2 section-title">Our Services</h2>
 
           <p class="section-text">
-            Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-            development of
-            the asset through its charitable foundation.
+            Check out the widest possible range of digital services that helps you in growing your business to plethoric heights.
           </p>
 
           <ul class="about-list">
