--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <h3 class="h3 card-title">Social Media Marketing</h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  Social media marketing helps businesses engage their target audience by creating tailored content on platforms like Facebook and Instagram, boosting brand awareness, traffic, and sales
                 </p>
 
                 <a href="smo.html" class="btn btn-primary">Explore</a>
@@ -282,7 +282,7 @@
                 <h3 class="h3 card-title">Paid Advertising All platforms</h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  Use platform-specific targeted paid advertising to unleash your brand's full potential. Use audience-specific ad placement strategies to increase exposure, boost traffic, and optimize conversions.
                 </p>
 
                 <a href="paidadd.html" class="btn btn-primary">Explore</a>
@@ -299,7 +299,7 @@
                 <h3 class="h3 card-title">Website Design & Development</h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  We specialize in web design and development services and create the most unique responsive websites that engage and convert.
                 </p>
 
                 <a href="web.html" class="btn btn-primary">Explore</a>
@@ -316,7 +316,7 @@
                 <h3 class="h3 card-title">Search Engine Optimization </h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  Let us help you reach more people and boost the amount of organic traffic you get. Acquire a greater number of organic leads at a cost that is just absolutely unbeatable.
                 </p>
 
                 <a href="seo.html" class="btn btn-primary">Explore</a>
@@ -333,7 +333,7 @@
                 <h3 class="h3 card-title">Promotional Video Marketing</h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  Engage your audience with the captivating promotional videos that help in telling your brand story. Boost the visibility, drive conversions, as well as enhance the customer connection through the impactful visual storytelling.
                 </p>
 
                 <a href="promotion.html" class="btn btn-primary">Explore</a>
@@ -350,7 +350,7 @@
                 <h3 class="h3 card-title">Graphics Design</h3>
 
                 <p class="card-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                  Use our graphic design services to bring your brand ideas to life through the visually beautiful representations. Use polished, attention-grabbing designs to boost your marketing and captivate your target audience.
                 </p>
 
                 <a href="graphics.html" class="btn btn-primary">Explore</a>
@@ -528,38 +528,32 @@
           <div class="role-card">
             <img src="./assets/img/seo1.jpg" alt="Executive Assistants">
             <h3>Search Engine Optimization</h3>
-            <p>Spend more time on what matters most. Let our executive virtual assistants manage your emails,
-              calendars, and other routine tasks.</p>
+            <p>Optimize your digital presence with SEO staffing services provided by our highly professional team.p>
           </div>
           <div class="role-card">
             <img src="./assets/img/design.jpg" alt="Graphic Designers">
             <h3>Graphic Designers</h3>
-            <p>Get your print or digital projects ready for publishing with our graphic designers.</p>
+            <p>Unlock creativity and elevate the standards you have sought out for your brand with our unique graphic design staffing services.</p>
           </div>
           <div class="role-card">
             <img src="./assets/img/smo1.jpg" alt="Prospect Appointment Setters">
             <h3>Social Media Marketing</h3>
-            <p>From generating sales opportunities to contacting prospects, our virtual assistants help you build a
-              stronger pipeline.</p>
+            <p>Our top-notch social media marketing staffing services will revolutionize your online presence and boost engagement and growth on various networking sites.</p>
           </div>
           <div class="role-card">
             <img src="./assets/img/programming.jpg" alt="Call Center Specialists">
             <h3>Website Design & Development</h3>
-            <p>Leverage our multilingual customer support specialists to resolve your customer issues efficiently
-              across all channels.</p>
+            <p>Enhance your online presence with our extensive website design and development staffing services, optimized for effective web presence.</p>
           </div>
           <div class="role-card">
             <img src="./assets/img/android.jpg" alt="Marketing Assistants">
             <h3>Android & IOS Development</h3>
-            <p>Be it social media design, copywriting, or website management, our virtual assistants streamline all
-              your online marketing needs.</p>
+            <p>Take your mobile strategy to the next level with Android and iOS app development staffing and get tailored applications for your business.</p>
           </div>
           <div class="role-card">
             <img src="./assets/img/hr.jpg" alt="Bookkeepers">
-            <h3>HR</h3>
-            <p>No bookkee
-            <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor
-              cash flows, and more.</p>
+            <h3>Content Writer</h3>
+            <p>Fuel your brand's narrative with our content writing staffing solutions, delivering compelling, tailored messages that resonate with your audience.</p>
           </div>
         </div>
         <div class="explore-more-container">
