--- a/index.html
+++ b/index.html
@@ -901,9 +901,7 @@
       <form class="newsletter-form">
         <div class="input-container">
           <input type="email" class="email-input" placeholder="Your email" required>
-          <button type="submit" class="btn btn-primary">
-            Subscribe
-          </button>
+          <button type="submit" class="btn btn-primary">Subscribe</button>
         </div>
       </form>
     </div>
