--- a/seo.html
+++ b/seo.html
@@ -169,7 +169,7 @@
             <h1 class="h1 hero-title">Affordable SEO Services for Your Businesses</h1>
 
             <p class="hero-text">
-              Capture and retrieve your lists across devices to help you stay organized at work, home, and on the go.
+              Unlock your online presence with our professional SEO services for continuous website traffic and let your enterprise fly high in the digital space!
             </p>
 
             <!-- <button class="btn btn-primary">Get started</button> -->
@@ -210,19 +210,18 @@
                    <div class="aboutus-feature-one">
                        <span><i class="fa fa-search aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       World Best Search Engine Optimization
+                        Elevate your brand's visibility and dominate the search rankings with our customised SEO strategies!
                      </span>
                      </div>
                      <div class="aboutus-feature-one">
                        <span><i class="fa fa-file aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       World Creative & Professional Content Writer
-                     </span>
+                        Transform the valuable clicks into customers experience and unparalleled growth with our expert SEO solutions!
                      </div>
                      <div class="aboutus-feature-one">
                        <span><i class="fa fa-bar-chart aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       optimized Your Business Growth Next Level
+                        Outrank the competition by driving organic traffic with data-driven SEO that delivers results!
                      </span>
                      <!-- </div>
                      <a href="" class="aboutus-btn">Contact Us</a>
@@ -239,11 +238,11 @@
 
             <h2 class="h2 section-title">Our Services</h2>
 
-            <p class="section-text">
+          <!--   <p class="section-text">
               Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
               development of
               the asset through its charitable foundation.
-            </p>
+            </p> -->
 
             <ul class="about-list">
 
@@ -257,7 +256,7 @@
                   <h3 class="h3 card-title">On-Page Optimization</h3>
 
                   <p class="card-text">
-                    Search engines are constantly updating their algorithms. This content is building for users, Click Through Rates, Usability, Keywords Strategy, Interlinking
+                    Optimise your website’s content and structure to captivate both users and search engines—turning visitors into loyal customers!
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -274,7 +273,7 @@
                   <h3 class="h3 card-title">Off-Page Optimization</h3>
 
                   <p class="card-text">
-                    Building a high-quality and relevant backlink is driven heavy traffic that is the final step to ensure you are well
+                    Build authority and links that put your site first on the search engines. let the world know you mean business!
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -397,11 +396,11 @@
 
                 <h2 class="h2 section-title">Why choose Us!</h2>
 
-                <p class="section-text">
+               <!--  <p class="section-text">
                   Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
                   development of
                   the asset through its charitable foundation.
-                </p>
+                </p> -->
 
                 <ul class="about-list">
 
@@ -412,11 +411,10 @@
                         <ion-icon name="pricetag-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Cost Effective</h3>
+                      <h3 class="h3 card-title">Experties</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
+                        The best brains of our team convert these algorithms in your favor for unbeatable search engine rankings.
 
                     </div>
                   </li>
@@ -428,10 +426,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Tailored Strategies</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Tailored SEO plans designed to meet the requirements of your unique business goals and audience needs.
                       </p>
 
                     </div>
@@ -444,10 +442,10 @@
                         <ion-icon name="sync-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Team Collaboration</h3>
+                      <h3 class="h3 card-title">ransparent Reporting</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Track your progress with clear, concise analytics and insights every step of the way.
                       </p>
 
                     </div>
@@ -460,10 +458,10 @@
                         <ion-icon name="ribbon-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">White Hat SEO Technique</h3>
+                      <h3 class="h3 card-title">Proven Results</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Join the league of countless satisfied clients who’ve seen significant growth in traffic and conversions with us.
                       </p>
 
                     </div>
@@ -476,16 +474,16 @@
                         <ion-icon name="trending-up-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Soaring Conversion Rate</h3>
+                      <h3 class="h3 card-title">Ongoing Support</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Our dedicated support team is always here to help you in navigating the myriad digital challenges.
                       </p>
 
                     </div>
                   </li>
 
-                  <li>
+                  <!-- <li>
                     <div class="chooseus-card">
 
                       <div class="card-icon">
@@ -499,7 +497,7 @@
                       </p>
 
                     </div>
-                  </li>
+                  </li> -->
 
 
                 </ul>
