--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
                   <div class="chooseus-card">
 
                     <div class="card-icon">
-                      <ion-icon name="sync-outline"></ion-icon>
+                      <ion-icon name="options-outline"></ion-icon>
                     </div>
 
-                    <h3 class="h3 card-title">Team Collaboration</h3>
+                    <h3 class="h3 card-title">Customised Solutions</h3>
 
                     <p class="card-text">
                       Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
