--- a/web.html
+++ b/web.html
@@ -170,7 +170,7 @@
             <h1 class="h1 hero-title">Professional Web Development to Expand Your Online Presence</h1>
 
             <p class="hero-text">
-              Capture and retrieve your lists across devices to help you stay organized at work, home, and on the go.
+              Transforming your ideas into stunning websites with innovative design and seamless development for your digital success!
             </p>
 
             <!-- <button class="btn btn-primary">Get started</button> -->
@@ -211,19 +211,19 @@
                    <div class="aboutus-feature-one">
                        <span><i class="fa fa-search aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       World Best Search Engine Optimization
+                        We mainly focus on transforming your idea into visually appealing and interactive professional websites.
                      </span>
                      </div>
                      <div class="aboutus-feature-one">
                        <span><i class="fa fa-file aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       World Creative & Professional Content Writer
+                        Our dedicated team crafts bespoke engaging digital solutions that help Brands stand out.
                      </span>
                      </div>
                      <div class="aboutus-feature-one">
                        <span><i class="fa fa-bar-chart aboutus-icon"></i> </span>
                       <span class="aboutus-feature-items">
-                       optimized Your Business Growth Next Level
+                        Committed to create exceptional web solutions that inspires as well as empowers businesses in the digital world.
                      </span>
                      <!-- </div>
                      <a href="" class="aboutus-btn">Contact Us</a>
@@ -239,12 +239,6 @@
           <div class="about-top">
 
             <h2 class="h2 section-title">Our Services</h2>
-
-            <p class="section-text">
-              Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-              development of
-              the asset through its charitable foundation.
-            </p>
 
             <ul class="about-list">
 
@@ -398,12 +392,6 @@
 
                 <h2 class="h2 section-title">Why choose Us!</h2>
 
-                <p class="section-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-                  development of
-                  the asset through its charitable foundation.
-                </p>
-
                 <ul class="about-list">
 
                   <li>
@@ -413,10 +401,10 @@
                         <ion-icon name="pricetag-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Cost Effective</h3>
+                      <h3 class="h3 card-title">Expert Team</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Our team of experienced professionals can cater to an innovative solution on the web as per your requirements.
                       </p>
 
                     </div>
@@ -429,10 +417,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Client-Centric Approach</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We prioritize your vision, collaborating closely to ensure your project aligns perfectly with your goals.
                       </p>
 
                     </div>
@@ -445,10 +433,10 @@
                         <ion-icon name="sync-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Team Collaboration</h3>
+                      <h3 class="h3 card-title">Cutting-Edge Technology</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        By using efficient and up to date tools and techniques, we help you design attractive and responsive web sites.
                       </p>
 
                     </div>
@@ -461,10 +449,10 @@
                         <ion-icon name="ribbon-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">White Hat SEO Technique</h3>
+                      <h3 class="h3 card-title">Transparent Communication</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We keep you posted at every stage of the research process to maintain friendly communication with you.
                       </p>
 
                     </div>
@@ -477,10 +465,10 @@
                         <ion-icon name="trending-up-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Soaring Conversion Rate</h3>
+                      <h3 class="h3 card-title">Ongoing Support</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Our commitment doesn’t end at launch. We provide continuous support to ensure your success online.
                       </p>
 
                     </div>
@@ -493,10 +481,10 @@
                         <ion-icon name="headset-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Free Support</h3>
+                      <h3 class="h3 card-title">Proven Results</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We have a track record of successful projects, that have been delivered with high-quality websites that drive results.
                       </p>
 
                     </div>
