--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="#chooseus" class="nav-link" class="dropdown-toggle">About</a>
+                <a href="about.html" class="nav-link" class="dropdown-toggle">About</a>
                 <div class="dropdown-content">
-                  <a href="#chooseus">About Us</a>
+                  <a href="about.html">About Us</a>
                   <a href="team.html">Our Team</a>
                   <a href="carrer.html">Careers</a>
                   <a href="contact.html">Contact Us</a>
@@ -1022,7 +1022,7 @@
             </li>
 
             <p class="office-address">Bhubaneswar – Head Office:
-              Plot No.1002/2430, IRC Village, Ps-Nayapalli, Dist-Khordha, Bhubaneswar, Dist-Khordha, Odisha - 751015</p>
+              Plot No.1002/2430, IRC Village, Ps-Nayapalli, Dist-Khordha, Bhubaneswar, Odisha - 751015</p>
 
           </ul>
 
