--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team</title>
+  <title>About us</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
   <!-- *******  Owl Carousel Links  ******* -->
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="about.css">
-
+  <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
 </head>
 
 <body>
@@ -131,9 +131,15 @@
 
   </header>
 
-  <section class="hero-section">
+  <!-- Mission Statement Section -->
+<section class="mission-section">
+    <h2>About Us</h2>
+    <p>To empower businesses with innovative digital marketing solutions that help them grow and achieve exceptional results in a competitive landscape.</p>
+</section>
+
+<section class="hero-section">
     <div class="hero-content">
-        <h1>About Us</h1>
+        <h1>Our Mission</h1>
         <p>Our company and culture are a lot like our product. They're crafted, not cobbled, for a delightful experience.</p>
     </div>
     <div class="hero-image">
@@ -141,11 +147,6 @@
     </div>
 </section>
 
-<!-- Mission Statement Section -->
-<section class="mission-section">
-    <h2>Our Mission</h2>
-    <p>To empower businesses with innovative digital marketing solutions that help them grow and achieve exceptional results in a competitive landscape.</p>
-</section>
 
 <!-- About Us Section -->
 <section id="learn-more" class="about-section">
@@ -195,7 +196,7 @@
 <section class="cta-section">
     <h2>Ready to Take Your Business to the Next Level?</h2>
     <p>Contact us today for a free consultation and let's create something amazing together!</p>
-    <a href="contact.html" class="cta-button">Contact Us</a>
+    <a href="contact.html" class="btn btn-primary">Contact Us</a>
 </section>
 
 
