--- a/web.html
+++ b/web.html
@@ -74,7 +74,7 @@
 
     <div class="container">
 
-      <!-- <a href="#" class="logo"> -->
+      <a href="index.html">
       <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
@@ -185,55 +185,6 @@
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
         <img src="./assets/img/web.png" alt="seo">
-      </section>
-
-
-
-
-
-      <!-- 
-        - #ABOUT
-      -->
-
-      <section class="aboutus">
-        <div class="aboutus-container">
-          <div class="aboutus-image">
-            <img src="./assets/img/seo-about.png" class="aboutus-img" alt="aboutus-image">
-          </div>
-          <div class="aboutus-text">
-            <div class="aboutus-us-items">
-              <h4 class="aboutus-main-heading">
-                About Us
-              </h4>
-              <p class="aboutus-description">
-                We are here for business <span class="color-full">solution & Ideas</span>
-              </p>
-              <div class="aboutus-feature">
-                <div class="aboutus-feature-one">
-                  <span><i class="fa fa-search aboutus-icon"></i> </span>
-                  <span class="aboutus-feature-items">
-                    We mainly focus on transforming your idea into visually appealing and interactive professional
-                    websites.
-                  </span>
-                </div>
-                <div class="aboutus-feature-one">
-                  <span><i class="fa fa-file aboutus-icon"></i> </span>
-                  <span class="aboutus-feature-items">
-                    Our dedicated team crafts bespoke engaging digital solutions that help Brands stand out.
-                  </span>
-                </div>
-                <div class="aboutus-feature-one">
-                  <span><i class="fa fa-bar-chart aboutus-icon"></i> </span>
-                  <span class="aboutus-feature-items">
-                    Committed to create exceptional web solutions that inspires as well as empowers businesses in the
-                    digital world.
-                  </span>
-                  <!-- </div>
-                     <a href="" class="aboutus-btn">Contact Us</a>
-                  </div> -->
-                </div>
-              </div>
-            </div>
       </section>
 
       <section class="about" id="about">
