--- a/about.html
+++ b/about.html
@@ -159,16 +159,15 @@
     </div>
 </section>
 
-<!-- Team Section -->
-<section id="learn-more" class="our-story-section">
-    
-    <div class="our-story-content">
-        <h2>Our Story</h2>
-        <p>Founded on the belief that every brand has a unique story. Verify Ads began its journey as a small team of marketing enthusiasts. Over the years, we have grown to become a comprehensible digital agency that combines creativity and analytics to help businesses thrive in the digital world. We believe our journey is driven by passion and innovation.</p>
-    </div>
-    <div class="our-story-image"></div>
-        <img src="team.jpg" alt="Our Team">
-    </div>
+<!-- our story -->
+<section class="our-story-section">
+  <div class="our-story-content">
+      <h1>Our Story</h1>
+      <p>Founded on the belief that every brand has a unique story. Verify Ads began its journey as a small team of marketing enthusiasts. Over the years, we have grown to become a comprehensible digital agency that combines creativity and analytics to help businesses thrive in the digital world. We believe our journey is driven by passion and innovation.</p>
+  </div>
+  <div class="our-story-image">
+      <img src="team.jpg" alt="Team Image">
+  </div>
 </section>
 
 
