--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 tailored applications for your business.</p>
             </div>
             <div class="role-card">
-              <img src="./assets/img/hr.jpg" alt="Bookkeepers">
+              <img src="./assets/img/content-writer.jpg" alt="Bookkeepers">
               <h3>Content Writer</h3>
               <p>Fuel your brand's narrative with our content writing staffing solutions, delivering compelling,
                 tailored messages that resonate with your audience.</p>
