--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
         <p>At Verify Ads, we believe that every business should have the possibility to grow with the help of proper digital marketing tools and techniques. We are dedicated at authentic connections, enhancing brand visibility, and driving measurable results for clients to thrive and progress in the digital space.</p>
     </div>
     <div class="hero-image">
-        <img src="team.jpg" alt="Team Image">
+        <img src="./assets/image/mission.jpg" alt="Team Image">
     </div>
 </section>
 
@@ -151,7 +151,7 @@
 <!-- About Us Section -->
 <section id="learn-more" class="about-section">
     <div class="about-image">
-        <img src="team.jpg" alt="Our Team">
+        <img src="./assets/image/we-are.jpg" alt="Our Team">
     </div>
     <div class="about-content">
         <h2>Who We Are</h2>
@@ -166,7 +166,7 @@
       <p>Founded on the belief that every brand has a unique story. Verify Ads began its journey as a small team of marketing enthusiasts. Over the years, we have grown to become a comprehensible digital agency that combines creativity and analytics to help businesses thrive in the digital world. We believe our journey is driven by passion and innovation.</p>
   </div>
   <div class="our-story-image">
-      <img src="team.jpg" alt="Team Image">
+      <img src="./assets/image/about-img.jpg" alt="Team Image">
   </div>
 </section>
 
