--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <div class="dropdown">
                 <a href="#about" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo.html">SEO</a>
-                  <a href="smo.html">SMO</a>
+                  <a href="seo.html">Search Engine Optimization (SEO)</a>
+                  <a href="smo.html">Social Media Marketing (SMM)</a>
                   <a href="web.html">Web Development & Design</a>
                   <a href="graphics.html">Graphics Design</a>
                   <a href="paidadd.html">Paid Advertising All platforms</a>
@@ -889,130 +889,7 @@
     - #FOOTER
   -->
 
-  <footer>
-
-    <div class="footer-top">
-      <div class="container">
-
-        <div class="footer-brand">
-
-          <img src="./assets/img/verify_ads_png.png" alt="digitize logo" class="footerlogo">
-
-
-          <p class="footer-text">DigitizeAds is Bhubaneswar's Top Internet Marketing Firm and Website Promotion Company.
-            We offer multiple web services to our worldwide clients. To get outstanding web services from us</p>
-
-          <p class="social-text">Follow Us :</p>
-
-          <ul class="social-list">
-
-            <li>
-              <a href="https://www.linkedin.com/company/digitizeads/" class="social-link">
-                <ion-icon name="logo-linkedin"></ion-icon>
-              </a>
-            </li>
-
-            <li>
-              <a href="https://instagram.com/" class="social-link">
-                <ion-icon name="logo-instagram"></ion-icon>
-              </a>
-            </li>
-
-            <li>
-              <a href="https://www.youtube.com/@digitizeads1970" class="social-link">
-                <ion-icon name="logo-youtube"></ion-icon>
-              </a>
-            </li>
-
-            <li>
-              <a href="https://www.facebook.com/DigitizeAds?mibextid=ZbWKwL" class="social-link">
-                <ion-icon name="logo-facebook"></ion-icon>
-              </a>
-            </li>
-
-          </ul>
-
-        </div>
-
-        <div class="footer-link-box">
-
-          <ul class="footer-link-list">
-
-            <li>
-              <h3 class="h4 link-title">Quick Links</h3>
-            </li>
-
-            <li>
-              <a href="index.html" class="footer-link">Home</a>
-            </li>
-
-            <li>
-              <a href="service.html" class="footer-link">Services</a>
-            </li>
-
-            <li>
-              <a href="carrer.html" class="footer-link">Careers</a>
-            </li>
-
-            <li>
-              <a href="blog.html" class="footer-link">Blog</a>
-            </li>
-
-            <li>
-              <a href="team.html" class="footer-link">Our Team</a>
-            </li>
-
-            <li>
-              <a href="contact.html" class="footer-link">Contact Us</a>
-            </li>
-
-            <li>
-              <a href="#" class="footer-link">About Us</a>
-            </li>
-
-
-          </ul>
-
-          <ul class="footer-link-list">
-
-            <li>
-              <h3 class="h4 link-title">Office Address</h3>
-            </li>
-
-            <p class="office-address">Bhubaneswar – Head Office:
-              Plot No.1002/2430, IRC Village, Ps-Nayapalli, Dist-Khordha, Bhubaneswar, Odisha - 751015</p>
-
-          </ul>
-
-          <ul class="footer-link-list">
-
-            <li>
-              <h3 class="h4 link-title">Contact Us</h3>
-            </li>
-
-            <p class="footer-contact">Phone No: (778) 899-4131. <br> <br>
-
-              Email: sales@digitizeads.com <br><br>
-
-              24/7 Sales:
-              (778) 899-4131
-
-          </ul>
-
-
-        </div>
-
-
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p class="copyright">
-        &copy; 2024 Verify Ads All rights reserved
-      </p>
-    </div>
-
-  </footer>
+  <div id="footer-placeholder"></div>
 
 
   <!-- 
