--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="about.css">
   <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
+  <link rel="stylesheet" href="./assets/css/global.css">
 </head>
 
 <body>
@@ -201,15 +202,24 @@
     <img src="./assets/img/map.png" alt="map">
     <span>map</span>
   </div>
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2024 Digital Marketing Agency. All rights reserved.</p>
-    </div>
-  </footer>
+
+
+  <div id="footer-placeholder"></div>
 
   <script src="about.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script>
+    // Load the footer dynamically
+    document.addEventListener("DOMContentLoaded", function() {
+        fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("footer-placeholder").innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
+    });
+</script>
 </body>
 
 </html>
