--- a/paidadd.html
+++ b/paidadd.html
@@ -92,9 +92,9 @@
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="#chooseus" class="nav-link" class="dropdown-toggle">About</a>
+                <a href="about.html" class="nav-link" class="dropdown-toggle">About</a>
                 <div class="dropdown-content">
-                  <a href="#chooseus">About Us</a>
+                  <a href="about.html">About Us</a>
                   <a href="team.html">Our Team</a>
                   <a href="carrer.html">Careers</a>
                   <a href="contact.html">Contact Us</a>
@@ -106,20 +106,20 @@
               <div class="dropdown">
                 <a href="#about" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo.html">SEO</a>
-                  <a href="smo.html">SMO</a>
+                  <a href="seo.html">Search Engine Optimization (SEO)</a>
+                  <a href="smo.html">Social Media Marketing (SMM)</a>
                   <a href="web.html">Web Development & Design</a>
                   <a href="graphics.html">Graphics Design</a>
                   <a href="paidadd.html">Paid Advertising All platforms</a>
                   <a href="promotion.html">Promotional Video Marketing</a>
                   <a href="localization.html">Translation & Localization Service</a>
-                  <a href="expert.html">Service Provider</a>
+                  <!-- <a href="expert.html">Service Provider</a> -->
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="team.html" class="nav-link">Our Team</a>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
             </li>
 
             <li class="nav-item">
@@ -130,18 +130,17 @@
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
 
+            <li class="nav-item">
+              <a href="package.html" class="nav-link">Package</a>
+            </li>
+
           </ul>
 
 
           <button id="callButton" class="btn btn-primary">
             <img src="./assets/img/lets talk.png" alt="Phone Icon" class="btn-icon">
-          </button>
-
-
-
 
         </nav>
-
       </div>
 
     </div>
